@@ -1467,6 +1467,8 @@ CREATE TABLE rttickets (
   deluserid integer	DEFAULT 0 NOT NULL,
   address_id integer	DEFAULT NULL
     CONSTRAINT rttickets_address_id_fk REFERENCES addresses (id) ON UPDATE CASCADE ON DELETE CASCADE,
+  nodeid integer	DEFAULT NULL
+    CONSTRAINT rttickets_nodeid_fk REFERENCES nodes (id) ON UPDATE CASCADE ON DELETE CASCADE,
   PRIMARY KEY (id)
 );
 
@@ -2975,6 +2977,6 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2017070700');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2017071000');
 
 COMMIT;
